--- a/src/pages/BlogPage/style.scss
+++ b/src/pages/BlogPage/style.scss
@@ -1,10 +1,7 @@
 #blog-page {
-  height: 100vh;
-  width: 100vw;
-
   @include media($breakpoint-not-small...) {
-    background: url("https://res.cloudinary.com/spencerkline/image/upload/blog-bgimage.jpg") no-repeat left 75% top 1rem;
-    background-size: 100% 100%;
+    background: url("https://res.cloudinary.com/spencerkline/image/upload/blog-bgimage.jpg") fixed left 75% top 1rem;
+    background-size: 100vw;
 
     #two-column-container {
       background-color: rgba( 0, 0, 0, .4 );
